// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with other props 1`] = `
<div>
  <script
    data-counter="right"
    data-url="url"
    type="IN/Share"
  />
</div>
`;

exports[`renders correctly with required props 1`] = `
<div>
  <script
    data-counter=""
    type="IN/Share"
  />
</div>
`;
